samples/_failures_safe/1761324639_dadb2a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_81a7a4f4.c: In function ‘main’:
./samples/SAFE/__tmp_81a7a4f4.c:179:5: error: ‘print_buffer’ undeclared (first use in this function); did you mean ‘print_buffer_hex’?
  179 |     print_buffer
      |     ^~~~~~~~~~~~
      |     print_buffer_hex
./samples/SAFE/__tmp_81a7a4f4.c:179:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_81a7a4f4.c:179:17: error: expected ‘;’ at end of input
  179 |     print_buffer
      |                 ^
      |                 ;
./samples/SAFE/__tmp_81a7a4f4.c:179:5: error: expected declaration or statement at end of input
  179 |     print_buffer
      |     ^~~~~~~~~~~~
